--- a/tutorial_student.ipynb
+++ b/tutorial_student.ipynb
@@ -8,8 +8,6 @@
     "\n",
     "This notebook gives a gentle introduction to the Early Classification of Time Series (ECTS) task.\n",
     "\n",
-    "[GENERAL INFO ON ECTS ...]\n",
-    "\n",
     "It is based on the `ml_edm` open-source python package, developped relatively to the taxonomy proposed in the recent [survey paper](https://arxiv.org/abs/2406.18332)."
    ]
   },
@@ -21,14 +19,14 @@
     " \n",
     " - A module dedicated to Classification stage, the implemented strategy in the library corresponds to the simple set of independently trained classifiers under the name `ClassifiersCollection`.\n",
     " - Another module for triggering models, 8 state-of-the-art trigger models implementations can be found in the package.\n",
-    "     - `ProbabilityThreshold`\n",
-    "     - `StoppingRule`\n",
-    "     - `EconomyGamma`\n",
-    "     - `TEASER`\n",
-    "     - `ECEC`\n",
-    "     - `CALIMERA`\n",
-    "     - `ECDIRE`\n",
-    "     - `EDSC`"
+    "     - `ProbabilityThreshold`: triggers a prediction if the estimated probability of the likeliest prediction exceeds some threshold, found by grid search\n",
+    "     - `StoppingRule`: uses a trigger function based on a linear combination of confidence estimates and a delay measure linear on time\n",
+    "     - `EconomyGamma`: triggers a decision if the predicted cost expectation is the lowest at time $t$ when compared with the expected cost for all future time steps.\n",
+    "     - `TEASER`: employs a trigger module consisting of a collection of $T$ One Class SVM learned over the training set in order to isolate good predictions from bad ones. A prediction is triggered once $\\nu$ consecutive predictions have been classified as `good' by these OneClass SVM.\n",
+    "     - `ECEC`: defines a confidence measure, based on the aggregated confidence of the predictions up to time $t$, and triggers a prediction if it exceeds a threshold, tuned by explicit grid-search.\n",
+    "     - `CALIMERA`: triggers a decision when a regressor model which predicts the difference between the current observed cost and the minimum cost in the future is negative.\n",
+    "     - `ECDIRE`: determines *safe* timestamps, based on classifier performance, from which predictions about possible classes can be made. Predictions cannot be triggered if those timestamps have not been reached. In addition, the difference between the two highest predicted probabilities must also exceed a certain threshold.\n",
+    "     - `EDSC`: trigger a prediction as soon as one discriminative shapelet match the currently observed time series."
    ]
   },
   {
@@ -44,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install git+https://github.com/ML-EDM/ml_edm.git@more_trigger_models "
+    "%pip install git+https://github.com/ML-EDM/ml_edm.git\n",
+    "%pip install matplotlib==3.7.1"
    ]
   },
   {
@@ -4958,7 +4957,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Idea 2 : having a stair-like delay cost"
    ]
